--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>3.3.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -71,5 +71,8 @@
             <url>https://jcenter.bintray.com</url>
         </repository>
     </repositories>
-
+  <properties>   
+  <maven.compiler.source>1.7</maven.compiler.source>   
+  <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 </project>
